--- a/packages/mcp-server/package.json
+++ b/packages/mcp-server/package.json
@@ -12,19 +12,20 @@
         "smoke": "tsx scripts/mcp-call.ts"
     },
     "dependencies": {
-        "ws": "^8.18.3",
-        "uuid": "^9.0.0",
+        "@types/node": "^24.3.0",
         "dotenv": "^17.2.1",
+        "uuid": "^9.0.0",
+        "ws": "^8.18.3",
         "zod": "^3.25.76",
         "zod-to-json-schema": "^3.23.3"
     },
     "devDependencies": {
-        "typescript": "^5.9.2",
+        "@types/uuid": "^9.0.7",
+        "@types/ws": "^8.5.10",
         "ava": "^6.4.1",
         "c8": "^10.1.3",
         "eslint": "^9.33.0",
         "tsx": "^4.20.3",
-        "@types/ws": "^8.5.10",
-        "@types/uuid": "^9.0.7"
+        "typescript": "^5.9.2"
     }
 }
