--- a/packages/mcp-stdio-wrapper/package.json
+++ b/packages/mcp-stdio-wrapper/package.json
@@ -13,15 +13,16 @@
         "format": "eslint . --fix"
     },
     "dependencies": {
-        "ws": "^8.18.3",
-        "dotenv": "^17.2.1"
+        "@types/node": "^24.3.0",
+        "dotenv": "^17.2.1",
+        "ws": "^8.18.3"
     },
     "devDependencies": {
-        "typescript": "^5.9.2",
+        "@types/ws": "^8.5.10",
         "ava": "^6.4.1",
         "c8": "^10.1.3",
         "eslint": "^9.33.0",
         "tsx": "^4.20.3",
-        "@types/ws": "^8.5.10"
+        "typescript": "^5.9.2"
     }
 }
