--- a/services/js/broker/package.json
+++ b/services/js/broker/package.json
@@ -9,6 +9,7 @@
         "coverage": "c8 ava"
     },
     "dependencies": {
+        "@types/node": "^24.3.0",
         "redis": "^4.6.7",
         "ws": "^8.18.0"
     },
