--- a/services/js/health/package.json
+++ b/services/js/health/package.json
@@ -10,13 +10,14 @@
     },
     "dependencies": {
         "@shared/js": "file:../../../shared/js",
+        "@types/node": "^24.3.0",
         "express": "^4.18.2",
         "ws": "^8.17.0"
     },
     "devDependencies": {
         "ava": "^6.4.1",
-        "supertest": "^6.3.3",
-        "c8": "^9.1.0"
+        "c8": "^9.1.0",
+        "supertest": "^6.3.3"
     },
     "ava": {
         "extensions": {
