--- a/services/js/vision/package.json
+++ b/services/js/vision/package.json
@@ -9,6 +9,7 @@
         "coverage": "c8 ava"
     },
     "dependencies": {
+        "@types/node": "^24.3.0",
         "express": "^4.18.2",
         "screenshot-desktop": "^1.15.1",
         "ws": "^8.18.3"
