--- a/services/ts/kanban-processor/package.json
+++ b/services/ts/kanban-processor/package.json
@@ -21,14 +21,14 @@
         "ws": "^8.18.0"
     },
     "devDependencies": {
-        "@types/node": "^22.10.10",
+        "@types/node": "^22.17.2",
         "@types/ws": "^8.5.10",
         "ava": "^6.4.1",
         "c8": "^9.1.0",
-        "ts-node": "^10.9.2",
-        "typescript": "5.7.3",
         "eslint": "^8.57.0",
         "eslint-config-neon": "^0.1.62",
-        "prettier": "^3.4.2"
+        "prettier": "^3.4.2",
+        "ts-node": "^10.9.2",
+        "typescript": "5.7.3"
     }
 }
