--- a/services/ts/llm-bridge/package.json
+++ b/services/ts/llm-bridge/package.json
@@ -6,5 +6,8 @@
     "main": "src/index.js",
     "scripts": {
         "start": "node src/index.js"
+    },
+    "dependencies": {
+        "@types/node": "^24.3.0"
     }
 }
