--- a/services/ts/llm/package.json
+++ b/services/ts/llm/package.json
@@ -11,6 +11,7 @@
         "lint": "pnpm exec @biomejs/biome lint . || true"
     },
     "dependencies": {
+        "@types/node": "^24.3.0",
         "express": "^4.18.2",
         "ollama": "^0.5.16",
         "ws": "^8.18.3"
