--- a/services/ts/smartgpt-bridge/package.json
+++ b/services/ts/smartgpt-bridge/package.json
@@ -19,6 +19,7 @@
         "@fastify/swagger": "^8.15.0",
         "@fastify/swagger-ui": "^1.10.2",
         "@shared/ts": "file:../../../shared/ts",
+        "@types/node": "^24.3.0",
         "ajv-formats": "^3.0.1",
         "chromadb": "^1.8.1",
         "dotenv": "^17.2.1",
@@ -37,11 +38,11 @@
         "uuid": "^9.0.1"
     },
     "devDependencies": {
+        "@biomejs/biome": "^2.1.4",
         "ava": "^6.1.3",
         "c8": "^9.1.0",
         "mongodb-memory-server": "^10.2.0",
         "sinon": "^17.0.1",
-        "@biomejs/biome": "^2.1.4",
         "tsx": "^4.19.0"
     }
 }
