--- a/services/ts/voice/package.json
+++ b/services/ts/voice/package.json
@@ -20,12 +20,12 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.21",
-        "@types/node": "^22.10.10",
+        "@types/node": "^22.17.2",
         "ava": "^6.4.1",
-        "ts-node": "^10.9.2",
+        "c8": "^9.1.0",
         "cross-env": "^10.0.0",
-        "typescript": "5.7.3",
-        "c8": "^9.1.0"
+        "ts-node": "^10.9.2",
+        "typescript": "5.7.3"
     },
     "ava": {
         "extensions": {
