--- a/services/py/stt/requirements.cpu.in
+++ b/services/py/stt/requirements.cpu.in
@@ -1,4 +1,5 @@
--i https://pypi.org/simple
+-i https://download.pytorch.org/whl/cpu
+--extra-index-url https://pypi.org/simple
 annotated-types==0.7.0; python_version >= '3.8'
 anyio==4.9.0; python_version >= '3.9'
 certifi==2025.7.14; python_version >= '3.7'
@@ -27,8 +28,8 @@ sniffio==1.3.1; python_version >= '3.7'
 starlette==0.47.2; python_version >= '3.9'
 sympy==1.14.0; python_version >= '3.9'
 tokenizers==0.21.4; python_version >= '3.9'
-torch==2.7.1; python_full_version >= '3.9.0'
-torchaudio==2.7.1
+torch==2.7.1+cpu; python_full_version >= '3.9.0'
+torchaudio==2.7.1+cpu
 tqdm==4.67.1; python_version >= '3.7'
 transformers==4.54.1; python_full_version >= '3.9.0'
 typing-extensions==4.14.1; python_version >= '3.9'
