--- a/services/py/tts/requirements.cpu.in
+++ b/services/py/tts/requirements.cpu.in
@@ -1,4 +1,5 @@
--i https://pypi.org/simple
+-i https://download.pytorch.org/whl/cpu
+--extra-index-url https://pypi.org/simple
 annotated-types==0.7.0; python_version >= '3.8'
 anyio==4.9.0; python_version >= '3.9'
 certifi==2025.7.14; python_version >= '3.7'
@@ -38,7 +39,7 @@ soundfile==0.13.1
 starlette==0.47.2; python_version >= '3.9'
 sympy==1.14.0; python_version >= '3.9'
 tokenizers==0.21.4; python_version >= '3.9'
-torch==2.7.1; python_full_version >= '3.9.0'
+torch==2.7.1+cpu; python_full_version >= '3.9.0'
 tqdm==4.67.1; python_version >= '3.7'
 transformers==4.54.1; python_full_version >= '3.9.0'
 typeguard==4.4.4; python_version >= '3.9'
