--- a/shared/py/requirements.cpu.in
+++ b/shared/py/requirements.cpu.in
@@ -1,4 +1,5 @@
--i https://pypi.org/simple
+-i https://download.pytorch.org/whl/cpu
+--extra-index-url https://pypi.org/simple
 absl-py==2.3.1; python_version >= '3.8'
 accelerate==1.9.0; python_full_version >= '3.9.0'
 aiohappyeyeballs==2.6.1; python_version >= '3.9'
@@ -181,10 +182,10 @@ tensorboard-data-server==0.7.2; python_version >= '3.7'
 threadpoolctl==3.6.0; python_version >= '3.9'
 tiktoken==0.9.0; python_version >= '3.9'
 tokenizers==0.21.4; python_version >= '3.9'
-torch==2.7.1; python_full_version >= '3.9.0'
+torch==2.7.1+cpu; python_full_version >= '3.9.0'
 torch-complex==0.4.4
-torchaudio==2.7.1
-torchvision==0.22.1; python_version >= '3.9'
+torchaudio==2.7.1+cpu
+torchvision==0.22.1+cpu; python_version >= '3.9'
 tqdm==4.67.1; python_version >= '3.7'
 transformers==4.54.1; python_full_version >= '3.9.0'
 typeguard==4.4.4; python_version >= '3.9'
