--- a/services/ts/llm/package.json
+++ b/services/ts/llm/package.json
@@ -13,21 +13,21 @@
         "lint": "pnpm exec @biomejs/biome lint . || true"
     },
     "dependencies": {
+        "@huggingface/inference": "^2.1.1",
         "@types/node": "^24.3.0",
         "express": "^4.18.2",
+        "js-yaml": "^4.1.0",
         "ollama": "^0.5.16",
-        "ws": "^8.18.3",
-        "@huggingface/inference": "^2.1.1",
-        "js-yaml": "^4.1.0"
+        "ws": "^8.18.3"
     },
     "devDependencies": {
+        "@types/express": "^4.17.23",
+        "@types/js-yaml": "^4.0.9",
+        "@types/node": "^22.10.10",
+        "@types/ws": "^8.18.1",
         "ava": "^6.4.1",
         "c8": "^9.1.0",
-        "typescript": "^5.7.3",
         "ts-node": "^10.9.2",
-        "@types/node": "^22.10.10",
-        "@types/express": "^4.17.21",
-        "@types/ws": "^8.5.10",
-        "@types/js-yaml": "^4.0.9"
+        "typescript": "^5.7.3"
     }
 }
