--- a/services/ts/llm/tsconfig.json
+++ b/services/ts/llm/tsconfig.json
@@ -1,21 +1,11 @@
 {
     "$schema": "https://json.schemastore.org/tsconfig.json",
+    "extends": "../../../tsconfig.base.json",
     "compilerOptions": {
-        "strict": true,
-        "module": "ESNext",
-        "moduleResolution": "Bundler",
-        "target": "ESNext",
         "outDir": "dist",
-        "declaration": true,
-        "declarationMap": true,
-        "sourceMap": true,
-        "resolveJsonModule": true,
-        "allowSyntheticDefaultImports": true,
-        "forceConsistentCasingInFileNames": true,
-        "skipLibCheck": true,
-        "lib": ["ESNext"],
-        "isolatedModules": true
+        "baseUrl": "."
     },
-    "include": ["src/**/*"],
+
+    "include": ["./src/**/*.ts"],
     "exclude": ["node_modules"]
 }
