Auto stash before merge of "main" and "origin/main"

--- a/services/ts/smartgpt-bridge/package.json
+++ b/services/ts/smartgpt-bridge/package.json
@@ -8,7 +8,7 @@
         "start": "node dist/fastifyServer.js",
         "reindex": "node dist/cli-reindex.js",
         "symbols": "node dist/cli-symbols.js",
-        "test": "ava",
+        "test": "pnpm build && ava",
         "test:watch": "ava -w",
         "build": "tsc -p tsconfig.json",
         "lint": "pnpm exec biome lint tests/unit tests/integration tests/system tests/helpers || true",
