--- a/services/ts/smartgpt-bridge/tsconfig.json
+++ b/services/ts/smartgpt-bridge/tsconfig.json
@@ -18,8 +18,9 @@
         "removeComments": false,
         "sourceMap": true,
         "outDir": "dist",
-        "lib": ["ES2022"]
+        "lib": ["ES2022"],
+        "types": ["node", "ava"]
     },
     "include": ["./src/**/*.ts"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "./src/tests/fixtures/**/*.ts", "./src/tests/fixtures/broken.ts"]
 }
