--- a/.github/workflows/lint-secrets.yml
+++ b/.github/workflows/lint-secrets.yml
@@ -7,10 +7,10 @@ on:
 jobs:
     lint-secrets:
         permissions:
-          contents: read
+            contents: read
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
             - name: Grep for tokens outside access layer
               run: |
                   set -euo pipefail
