--- a/.github/workflows/lint-ts.yml
+++ b/.github/workflows/lint-ts.yml
@@ -21,13 +21,13 @@ jobs:
                     - file-watcher
 
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
-            - uses: actions/setup-node@v3
+            - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
               with:
                   node-version: '20'
 
-            - uses: actions/setup-python@v4
+            - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
               with:
                   python-version: '3.11'
 
@@ -35,7 +35,7 @@ jobs:
               run: python -m pip install hy dotenv
 
             - name: Cache pip dependencies
-              uses: actions/cache@v3
+              uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
               with:
                   path: ~/.cache/pip
                   key: ${{ runner.os }}-pip-${{ hashFiles('Pipfile.lock') }}
@@ -48,7 +48,7 @@ jobs:
                   corepack prepare pnpm@latest --activate
 
             - name: Cache npm dependencies
-              uses: actions/cache@v3
+              uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
               with:
                   path: ~/.npm
                   key: ${{ runner.os }}-npm-${{ hashFiles(format('services/ts/{0}/package-lock.json', matrix.service)) }}
