--- a/.github/workflows/test-integration-e2e.yml
+++ b/.github/workflows/test-integration-e2e.yml
@@ -1,23 +1,23 @@
 name: Integration and E2E Tests
 permissions:
-  contents: read
+    contents: read
 
 on:
-  pull_request:
-  push:
-    branches: [main]
+    pull_request:
+    push:
+        branches: [main]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+    test:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
-      - name: Install Hy
-        run: python -m pip install hy dotenv pytest
-      - name: Install dependencies
-        run: make system-deps setup-python
-      - name: Run integration tests
-        run: make test-integration
-      - name: Run end-to-end tests
-        run: make test-e2e
+            - name: Install Hy
+              run: python -m pip install hy dotenv pytest
+            - name: Install dependencies
+              run: make system-deps setup-python
+            - name: Run integration tests
+              run: make test-integration
+            - name: Run end-to-end tests
+              run: make test-e2e
