--- a/.github/workflows/test-ts.yml
+++ b/.github/workflows/test-ts.yml
@@ -1,67 +1,67 @@
 name: TS Test Suite
 permissions:
-  contents: read
+    contents: read
 
 on:
-  pull_request:
-  push:
-    branches: [main]
+    pull_request:
+    push:
+        branches: [main]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        service:
-          - cephalon
-          - discord-embedder
-          - llm
-          - voice
-          - file-watcher
+    test:
+        runs-on: ubuntu-latest
+        strategy:
+            fail-fast: false
+            matrix:
+                service:
+                    - cephalon
+                    - discord-embedder
+                    - llm
+                    - voice
+                    - file-watcher
 
-    steps:
-      - uses: actions/checkout@v3
+        steps:
+            - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "20"
+            - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
+              with:
+                  node-version: '20'
 
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
+            - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
+              with:
+                  python-version: '3.11'
 
-      - name: Install Hy
-        run: python -m pip install hy dotenv
+            - name: Install Hy
+              run: python -m pip install hy dotenv
 
-      - name: Cache pip dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('Pipfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+            - name: Cache pip dependencies
+              uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
+              with:
+                  path: ~/.cache/pip
+                  key: ${{ runner.os }}-pip-${{ hashFiles('Pipfile.lock') }}
+                  restore-keys: |
+                      ${{ runner.os }}-pip-
 
-      - name: Cache npm dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-pip-${{ hashFiles(format('services/ts/{0}/package-lock.json', matrix.service)) }}
-          restore-keys: |
-            ${{ runner.os }}-npm-
+            - name: Cache npm dependencies
+              uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
+              with:
+                  path: ~/.npm
+                  key: ${{ runner.os }}-pip-${{ hashFiles(format('services/ts/{0}/package-lock.json', matrix.service)) }}
+                  restore-keys: |
+                      ${{ runner.os }}-npm-
 
-      - name: Install dependencies
-        run: make system-deps setup-ts-service-${{ matrix.service }}
+            - name: Install dependencies
+              run: make system-deps setup-ts-service-${{ matrix.service }}
 
-      - name: Run tests
-        run: make test-ts-service-${{ matrix.service }}
+            - name: Run tests
+              run: make test-ts-service-${{ matrix.service }}
 
-      - name: Generate coverage report
-        run: make coverage-ts-service-${{ matrix.service }}
+            - name: Generate coverage report
+              run: make coverage-ts-service-${{ matrix.service }}
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: services/ts/${{ matrix.service }}/coverage/lcov.info
-          flags: ts-${{ matrix.service }}
+            - name: Upload coverage to Codecov
+              uses: codecov/codecov-action@8f6ec407a34d5ec2b33d7d8f7f50279493b5efb4 # v5.5.0
+              with:
+                  token: ${{ secrets.CODECOV_TOKEN }}
+                  files: services/ts/${{ matrix.service }}/coverage/lcov.info
+                  flags: ts-${{ matrix.service }}
