--- a/package.json
+++ b/package.json
@@ -16,30 +16,30 @@
         "@shared/js": "file:shared/js",
         "@shared/sibilant": "file:shared/sibilant",
         "@shared/ts": "file:shared/ts",
-        "adm-zip": "^0.5.16",
-        "dotenv": "^17.2.1",
-        "http-proxy": "^1.18.1",
-        "mongodb": "^6.18.0",
-        "pm2": "^6.0.8",
-        "ws": "^8.18.3",
-        "yaml": "^2.8.1",
-        "zod": "^3.25.76"
+        "adm-zip": "0.5.16",
+        "dotenv": "17.2.1",
+        "http-proxy": "1.18.1",
+        "mongodb": "6.18.0",
+        "pm2": "6.0.8",
+        "ws": "8.18.3",
+        "yaml": "2.8.1",
+        "zod": "3.25.76"
     },
     "devDependencies": {
-        "@biomejs/biome": "^2.2.2",
-        "@types/jest": "^30.0.0",
-        "@types/mongodb": "^4.0.6",
-        "@typescript-eslint/eslint-plugin": "^8.39.0",
-        "@typescript-eslint/parser": "^8.39.0",
-        "ava": "^6.4.1",
-        "c8": "^10.1.3",
-        "eslint": "^9.33.0",
-        "jest": "^30.0.5",
-        "puppeteer": "^24.16.0",
-        "ts-jest": "^29.4.1",
-        "ts-node": "^10.9.2",
-        "tsx": "^4.20.3",
-        "typescript": "^5.9.2"
+        "@biomejs/biome": "2.2.2",
+        "@types/jest": "30.0.0",
+        "@types/mongodb": "4.0.6",
+        "@typescript-eslint/eslint-plugin": "8.39.0",
+        "@typescript-eslint/parser": "8.39.0",
+        "ava": "6.4.1",
+        "c8": "10.1.3",
+        "eslint": "9.33.0",
+        "jest": "30.0.5",
+        "puppeteer": "24.16.0",
+        "ts-jest": "29.4.1",
+        "ts-node": "10.9.2",
+        "tsx": "4.20.3",
+        "typescript": "5.9.2"
     },
     "license": "GPL-3.0-only",
     "volta": {
@@ -47,6 +47,6 @@
         "pnpm": "9.0.0"
     },
     "engines": {
-        "node": "20.x"
+        "node": "20.19.4"
     }
 }
