--- a/shared/ts/package.json
+++ b/shared/ts/package.json
@@ -7,8 +7,8 @@
         "lisp": "node dist/cli/lisp.js",
         "test": "pnpm run build && ../../node_modules/.bin/ava",
         "coverage": "pnpm run build && ../../node_modules/.bin/c8 ../../node_modules/.bin/ava",
-        "lint": "pnpm exec @biomejs/biome lint . || true",
-        "format": "pnpm exec @biomejs/biome format --write .",
+        "lint": "pnpm exec biome lint . || true",
+        "format": "pnpm exec biome format --write .",
         "clean": "rimraf dist"
     },
     "bin": {
@@ -41,7 +41,7 @@
         "zod": "^3.23.8"
     },
     "devDependencies": {
-        "@biomejs/biome": "^2.1.4",
+        "@biomejs/biome": "^2.2.2",
         "@types/body-parser": "^1.19.5",
         "@types/estree": "^1.0.5",
         "@types/express": "^4.17.21",
