--- a/services/py/discord_attachment_indexer/Pipfile
+++ b/services/py/discord_attachment_indexer/Pipfile
@@ -1,23 +1,1 @@
-[[source]]
-url = "https://pypi.org/simple"
-verify_ssl = true
-name = "pypi"
-
-[packages]
-discord = "*"
-pandas = "*"
-dotenv = "*"
-pymongo = "*"
-pytest-asyncio = "*"
-hy = "*"
-websockets = "*"
-
-[dev-packages]
-pytest-cov = "*"
-pytest = "*"
-flake8 = "*"
-black = "*"
-anyio = "*"
-
-[requires]
-python_version = "3.12"
+../shared/discord_indexer/Pipfile
