--- a/services/ts/markdown-graph/biome.json
+++ b/services/ts/markdown-graph/biome.json
@@ -1,11 +1,3 @@
 {
-    "$schema": "https://biomejs.dev/schemas/2.1.3/schema.json",
-    "files": {
-        "includes": ["src/**", "tests/**"]
-    },
-    "linter": {
-        "rules": {
-            "recommended": false
-        }
-    }
+    "extends": ["../../../templates/ts/biome.base.json"]
 }
