--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "coverage": "c8 ava tests/*.test.js",
         "build:docs": "node scripts/generate-service-docs.js",
         "health:node-abi": "node -p \"process.versions.node + ' ABI ' + process.versions.modules\"",
-        "prepare": "chmod +x ./bin/promethean.js"
+        "prepare": "chmod +x ./bin/promethean.js",
+        "lint": "biome lint --config-path=biome.json .",
+        "format": "biome format --config-path=biome.json --write ."
     },
     "bin": {
         "prom": "./bin/promethean.js"
