--- a/services/ts/file-watcher/package.json
+++ b/services/ts/file-watcher/package.json
@@ -4,11 +4,11 @@
     "main": "dist/index.js",
     "type": "module",
     "scripts": {
-        "build": "tsc && node scripts/patch-imports.js",
+        "build": "tsc --outDir dist -p tsconfig.json && node scripts/patch-imports.js",
         "prestart": "pnpm run build",
         "start": "node dist/index.js",
         "start:dev": "node --loader ts-node/esm src/index.ts",
-        "build:check": "tsc --noEmit --incremental false",
+        "build:check": "tsc --noEmit --incremental false -p tsconfig.json",
         "test": "pnpm run build && ava",
         "coverage": "pnpm run build && c8 ava",
         "lint": "prettier --cache --check . && eslint . --cache || true",
