--- a/services/ts/voice/package.json
+++ b/services/ts/voice/package.json
@@ -4,7 +4,7 @@
     "type": "module",
     "main": "dist/index.js",
     "scripts": {
-        "build": "tsc && node scripts/patch-imports.js",
+        "build": "tsc --outDir dist -p tsconfig.json && node scripts/patch-imports.js",
         "test": "cross-env TS_NODE_TRANSPILE_ONLY=1 ava tests/dummy.test.ts",
         "coverage": "cross-env TS_NODE_TRANSPILE_ONLY=1 c8 ava tests/dummy.test.ts",
         "lint": "pnpm exec @biomejs/biome lint . || true",
@@ -19,6 +19,7 @@
         "wav": "^1.0.2"
     },
     "devDependencies": {
+        "@biomejs/biome": "^2.2.2",
         "@types/express": "^4.17.21",
         "@types/node": "^22.17.2",
         "ava": "^6.4.1",
