--- a/services/ts/voice/tsconfig.json
+++ b/services/ts/voice/tsconfig.json
@@ -1,4 +1,4 @@
 {
-    "extends": "../config/tsconfig.service.json",
-    "include": ["src/*.ts"]
+  "extends": "../../../config/tsconfig.service.json",
+  "include": ["src/*.ts"]
 }
