--- a/services/ts/attachment-embedder/package.json
+++ b/services/ts/attachment-embedder/package.json
@@ -1,22 +1,33 @@
 {
-    "name": "attachment-embedder",
-    "version": "0.0.1",
-    "type": "module",
-    "main": "./src/index.ts",
-    "scripts": {
-        "start": "node --enable-source-maps --experimental-specifier-resolution=node ./src/index.ts",
-        "test": "ava",
-        "coverage": "c8 ava",
-        "build": "echo 'ts-run direct'",
-        "lint": "pnpm exec @biomejs/biome lint . || true"
-    },
-    "dependencies": {
-        "@shared/prom-lib": "file:../../../shared/ts",
-        "@types/node": "^24.3.0",
-        "discord.js": "^14.17.3"
-    },
-    "devDependencies": {
-        "ava": "^6.4.1",
-        "c8": "^9.1.0"
-    }
+  "name": "attachment-embedder",
+  "version": "0.0.1",
+  "type": "module",
+  "main": "./src/index.ts",
+  "scripts": {
+    "start": "node --enable-source-maps --experimental-specifier-resolution=node ./src/index.ts",
+    "test": "ava",
+    "coverage": "c8 ava",
+    "build": "echo 'ts-run direct'",
+    "lint": "pnpm exec @biomejs/biome lint . || true"
+  },
+  "dependencies": {
+    "@shared/prom-lib": "file:../../../shared/ts",
+    "@types/node": "^24.3.0",
+    "discord.js": "^14.17.3"
+  },
+  "devDependencies": {
+    "ava": "^6.4.1",
+    "c8": "^9.1.0",
+    "tsx": "^4.20.3",
+    "@biomejs/biome": "^2.2.2"
+  },
+  "ava": {
+    "extensions": [
+      "ts",
+      "js"
+    ],
+    "nodeArguments": [
+      "--import=tsx"
+    ]
+  }
 }
