--- a/services/hy/stt/Dockerfile
+++ b/services/hy/stt/Dockerfile
@@ -1,12 +1,10 @@
 # syntax=docker/dockerfile:1
-FROM python:3.12-slim
-
-WORKDIR /app
+ARG BASE_IMAGE=base-python-pipenv
+FROM ${BASE_IMAGE}
 
 # Install dependencies
 COPY Pipfile Pipfile.lock ./
-RUN pip install --no-cache-dir pipenv && \
-    pipenv install --deploy --ignore-pipfile
+RUN pipenv install --deploy --ignore-pipfile
 
 # Copy source code
 COPY . .
