--- a/services/ts/voice/package.json
+++ b/services/ts/voice/package.json
@@ -4,7 +4,7 @@
     "type": "module",
     "main": "dist/index.js",
     "scripts": {
-        "build": "tsc --outDir dist -p tsconfig.json && node scripts/patch-imports.js",
+        "build": "tsc && node ../scripts/patch-imports.js",
         "test": "cross-env TS_NODE_TRANSPILE_ONLY=1 ava tests/dummy.test.ts",
         "coverage": "cross-env TS_NODE_TRANSPILE_ONLY=1 c8 ava tests/dummy.test.ts",
         "lint": "pnpm exec @biomejs/biome lint . || true",
