--- a/services/ts/attachment-embedder/package.json
+++ b/services/ts/attachment-embedder/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.ts",
   "scripts": {
     "start": "node --enable-source-maps --experimental-specifier-resolution=node ./src/index.ts",
-    "test": "pnpm build && ava --config ../../../config/ava.config.mjs",
+    "test": "pnpm build && ava --config ../../../config/ava.config.mjs tests/smoke.test.js",
     "coverage": "pnpm build && c8 ava",
     "build": "tsc",
     "lint": "pnpm exec @biomejs/biome lint ."
