--- a/services/ts/cephalon/package.json
+++ b/services/ts/cephalon/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "build": "tsc -p .",
     "start": "node dist/index.js",
-    "test": "pnpm run build && ava --config ../../../config/ava.config.mjs --node-arguments='--enable-source-maps'",
-    "coverage": "pnpm run build && c8 ava --config ../../../config/ava.config.mjs --node-arguments='--enable-source-maps'",
+    "test": "pnpm run build && SKIP_NETWORK_TESTS=1 ava --config ../../../config/ava.config.mjs tests/smoke.test.js --node-arguments='--enable-source-maps'",
+    "coverage": "pnpm run build && SKIP_NETWORK_TESTS=1 c8 ava --config ../../../config/ava.config.mjs tests/smoke.test.js --node-arguments='--enable-source-maps'",
     "build:check": "tsc --noEmit --incremental false -p .",
     "deploy": "pnpm run build && node --env-file=../../.env dist/util/deploy.js",
     "lint": "pnpm exec biome lint --config-path ../config/biome.json .. || true",
