--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "packageManager": "pnpm@9.0.0",
   "scripts": {
+    "generate_mcp_configs": "bb ./mk/mcp-compile.clj ./config/mcp_servers.edn ~/.codex/config.toml ~/.config/mcp/config.json ~/.config/Code/User/mcp.json",
     "preinstall": "node -e \"const ua = process.env.npm_config_user_agent || ''; if (!ua.includes('pnpm')) { console.error('\\nERROR: pnpm is required for this repo. npm/yarn are not supported and often fail with EACCES permission errors.\\nInstall via: corepack enable && corepack prepare pnpm@latest --activate\\nThen re-run: pnpm install\\n'); process.exit(1); }\"",
     "test": "pnpm run test:unit",
     "test:unit": "pnpm -r run build && ava --config ./config/ava.config.mjs \"services/**/dist/**/*.test.js\" \"services/**/dist/**/tests/**/*.js\" \"packages/**/dist/**/*.test.js\" \"packages/**/dist/**/test/**/*.js\" \"packages/**/dist/**/tests/**/*.js\" \"shared/**/dist/**/*.test.js\" \"shared/**/dist/**/tests/**/*.js\" \"templates/**/dist/**/test/**/*.js\" \"templates/**/dist/**/tests/**/*.js\" \"services/**/tests/**/*.js\" \"packages/**/tests/**/*.js\" \"shared/**/tests/**/*.js\" \"templates/**/tests/**/*.js\" \"tests/**/*.js\" \"!**/*integration*.*\" \"!**/*e2e*.*\" \"!**/integration/**\" \"!**/e2e/**\" \"!**/system/**\"",
