--- a/.github/workflows/test-shared-ts.yml
+++ b/.github/workflows/test-shared-ts.yml
@@ -1,26 +1,26 @@
 permissions:
-  contents: read
+    contents: read
 name: Shared TS Tests
 on:
-  pull_request:
-  push:
-    branches: [main]
+    pull_request:
+    push:
+        branches: [main]
 
 jobs:
-  test-shared-ts:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-      - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
-        with:
-          node-version: "20"
-      - name: Enable Corepack and pnpm
-        run: |
-          corepack enable
-          corepack prepare pnpm@latest --activate
-      - name: Install workspace deps
-        run: pnpm install
-      - name: Build shared lib
-        run: pnpm --filter @shared/prom-lib build
-      - name: Run shared tests
-        run: pnpm --filter @shared/prom-lib test
+    test-shared-ts:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+            - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
+              with:
+                  node-version: '20'
+            - name: Enable Corepack and pnpm
+              run: |
+                  corepack enable
+                  corepack prepare pnpm@latest --activate
+            - name: Install workspace deps
+              run: pnpm install
+            - name: Build shared lib
+              run: pnpm --filter @shared/prom-lib build
+            - name: Run shared tests
+              run: pnpm --filter @shared/prom-lib test
