--- a/.github/workflows/sync_board.yml
+++ b/.github/workflows/sync_board.yml
@@ -1,24 +1,24 @@
 name: Sync Board
 permissions:
-  contents: read
-  projects: write
+    contents: read
+    projects: write
 
 on:
-  push:
-    branches: [main]
+    push:
+        branches: [main]
 
 jobs:
-  sync:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
-      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
-        with:
-          python-version: "3.12"
-      - name: Install dependencies
-        run: pip install requests
-      - name: Sync project board
-        env:
-          GITHUB_TOKEN: ${{ secrets.PROJECT_PAT || github.token }}
-          GITHUB_PROJECT_ID: ${{ secrets.PROJECT_COLUMN_ID }}
-        run: python scripts/github_board_sync.py
+    sync:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+            - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
+              with:
+                  python-version: '3.12'
+            - name: Install dependencies
+              run: pip install requests
+            - name: Sync project board
+              env:
+                  GITHUB_TOKEN: ${{ secrets.PROJECT_PAT || github.token }}
+                  GITHUB_PROJECT_ID: ${{ secrets.PROJECT_COLUMN_ID }}
+              run: python scripts/github_board_sync.py
