--- a/mypy.ini
+++ b/mypy.ini
@@ -1,162 +1,38 @@
 [mypy]
 python_version = 3.12
-; Keep pre-commit type checks lenient while legacy paths stabilize
-warn_unused_ignores = false
+warn_unused_ignores = true
 warn_redundant_casts = true
-disallow_incomplete_defs = false
+disallow_incomplete_defs = true
 no_implicit_optional = true
 files =
-    shared/py/,
-    services/py/
-exclude =
-    (?x)(
-        ^scripts/|
-        ^services/hy/
-        ^services/py/stt/whisper-npu-py/
-    )
+    shared/py/embedding_client.py,
+    shared/py/heartbeat_client.py,
+    shared/py/utils/embeddings_processing.py,
+    services/py/embedding_service/drivers/ollama_driver.py,
+    services/py/embedding_service/drivers/transformers_driver.py,
+    services/py/embedding_service/drivers/__init__.py
 
-
-# Ignore complex overload issues in shared_hf
-# Bad
-; [mypy-shared.py.hf.*]
-; ignore_errors = true
-[mypy-shared.py.core.src.shared_core.*]
-ignore_errors = true
-
-# Allow missing type information for third‑party libs without stubs
-[mypy-soundfile]
-ignore_missing_imports = true
-[mypy-soundfile.*]
-ignore_missing_imports = true
-
-[mypy-soxr]
-ignore_missing_imports = true
-[mypy-soxr.*]
-ignore_missing_imports = true
-
-[mypy-openvino]
-ignore_missing_imports = true
-[mypy-openvino.*]
-ignore_missing_imports = true
-[mypy-openvino.runtime]
-ignore_missing_imports = true
-[mypy-openvino.runtime.*]
-ignore_missing_imports = true
-
-[mypy-torchaudio]
-ignore_missing_imports = true
-[mypy-torchaudio.*]
-ignore_missing_imports = true
-
-[mypy-pydantic_settings]
-ignore_missing_imports = true
-[mypy-pydantic_settings.*]
-ignore_missing_imports = true
-
-[mypy-symspellpy]
-ignore_missing_imports = true
-[mypy-symspellpy.*]
-ignore_missing_imports = true
-
-[mypy-nltk]
-ignore_missing_imports = true
-[mypy-nltk.*]
-ignore_missing_imports = true
-
-[mypy-hy]
-ignore_missing_imports = true
-[mypy-hy.*]
-ignore_missing_imports = true
-
-[mypy-PIL]
-ignore_missing_imports = true
-[mypy-PIL.*]
-ignore_missing_imports = true
-
-[mypy-sentence_transformers]
+[mypy-chromadb.*]
 ignore_missing_imports = true
 [mypy-sentence_transformers.*]
 ignore_missing_imports = true
-
-# Transitional: ignore missing internal modules under shared.py.* to avoid
-# import-not-found explosions while legacy paths are being restored.
-[mypy-shared.py.*]
-ignore_missing_imports = true
-ignore_errors = true
-
-[mypy-shared.py]
-ignore_errors = true
-
-# Transitional: services moved; ignore missing imports for legacy service paths
-[mypy-services.py.*]
-ignore_missing_imports = true
-
-[mypy-websockets]
-ignore_missing_imports = true
-[mypy-websockets.*]
-ignore_missing_imports = true
-
-[mypy-chromadb]
-ignore_missing_imports = true
-[mypy-chromadb.*]
-ignore_missing_imports = true
-
-[mypy-discord]
-ignore_missing_imports = true
-[mypy-discord.*]
-ignore_missing_imports = true
-
-[mypy-fastapi]
-ignore_missing_imports = true
-[mypy-fastapi.*]
-ignore_missing_imports = true
-
-[mypy-transformers]
-ignore_missing_imports = true
-[mypy-transformers.*]
-ignore_missing_imports = true
-
-[mypy-httpx]
-ignore_missing_imports = true
-[mypy-httpx.*]
-ignore_missing_imports = true
-
-[mypy-dotenv]
-ignore_missing_imports = true
-[mypy-dotenv.*]
-ignore_missing_imports = true
-
-[mypy-scipy]
-ignore_missing_imports = true
-[mypy-scipy.*]
-ignore_missing_imports = true
-
-[mypy-torch]
-ignore_missing_imports = true
-[mypy-torch.*]
-ignore_missing_imports = true
-
-[mypy-ollama]
-ignore_missing_imports = true
-[mypy-ollama.*]
-ignore_missing_imports = true
-
-[mypy-pymongo]
-ignore_missing_imports = true
-[mypy-pymongo.*]
-ignore_missing_imports = true
-
-[mypy-librosa]
+[mypy-PIL.*]
 ignore_missing_imports = true
 [mypy-librosa.*]
 ignore_missing_imports = true
-
-[mypy-matplotlib]
-ignore_missing_imports = true
 [mypy-matplotlib.*]
 ignore_missing_imports = true
-
-[mypy-inflect]
+[mypy-transformers.*]
 ignore_missing_imports = true
-[mypy-inflect.*]
+[mypy-openvino.*]
 ignore_missing_imports = true
+[mypy-torch.*]
+ignore_missing_imports = true
+[mypy-torchaudio.*]
+ignore_missing_imports = true
+[mypy-websockets.*]
+ignore_missing_imports = true
+[mypy-chromadb.utils.embedding_functions.*]
+ignore_missing_imports = true
+[mypy-shared.py.utils.websocket]
+ignore_errors = true
