--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "prom": "./bin/promethean.js"
   },
   "dependencies": {
-    "@types/node": "^24.3.0",
+    "@shared/js": "file:shared/js",
+    "@shared/sibilant": "file:shared/sibilant",
+    "@shared/ts": "file:shared/ts",
     "adm-zip": "0.5.16",
     "dotenv": "17.2.1",
     "http-proxy": "1.18.1",
@@ -45,13 +47,6 @@
     "ts-node": "10.9.2",
     "tsx": "4.20.3",
     "typescript": "5.9.2"
-  },
-  "pnpmOverrides": {
-    "zod": "3.23.8",
-    "undici": "6.19.8",
-    "fastify": "5.1.0",
-    "typescript": "5.6.3",
-    "tsup": "8.2.4"
   },
   "license": "GPL-3.0-only",
   "volta": {
